Wed Nov 21 04:06:54 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Fix omindex not to segfault when -F option without a ':'
	  is passed.

Tue Sep 25 23:57:12 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,omindex.cc: Replace shell_protect() with
	  append_filename_argument() from common/append_filename_arg.h.
	  Extracting text using external filters now works for filenames
	  containing a newline character.

Thu Aug 09 20:07:59 GMT 2012  Dan Colish <dcolish@gmail.com>

	* Makefile.am,configure.ac: Allow users to configure with
	  MAGIC_PREFIX for non-standard installs of libmagic

Wed Jul 18 10:51:39 GMT 2012  Olly Betts <olly@survex.com>

	* urldecode.h: Fix to decode escaped character at the end of the
	  string.
	* urlenctest.cc: Add regression testcase.

Sun Jul 01 10:53:35 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2 branch.

Tue Jun 26 11:59:17 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Set link_all_deplibs_CXX=no on solaris, like we
	  already do for xapian-core.

Thu Jun 21 13:44:06 GMT 2012  Olly Betts <olly@survex.com>

	* xlsxparse.cc: Check for "uniquecount" parameter, not "unqiueCount" as
	  we normalise parameter names to lower case.

Thu Jun 21 13:42:35 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: unzip extracts files in the order they are in the
	  archive, not the order they are on the command line, so call unzip
	  twice when the order of extraction matters.

Tue Jun 19 00:58:04 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,omindex.cc,opendocparse.cc,opendocparse.h,xmlparse.cc:
	  Improve handling of headers and footers on OpenDocument documents.

Mon Jun 18 07:02:20 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Properly fix the "trim trailing formfeeds" code.

Mon Jun 18 06:16:39 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Tweak previous change.

Mon Jun 18 05:49:07 GMT 2012  Olly Betts <olly@survex.com>
